--- a/models/_nba_docs.yml
+++ b/models/_nba_docs.yml
@@ -120,3 +120,12 @@ models:
       - name: seed
         tests:
           - not_null
+
+  - name: nba_team_stats
+    columns:
+      - name: max_win_streak
+        description: "The longest win streak for each team"
+        tests:
+          - not_null
+          - dbt_utils.expression_is_true:
+              expression: ">= 0"
