--- a/models/_nba_docs.yml
+++ b/models/_nba_docs.yml
@@ -120,3 +120,13 @@ models:
       - name: seed
         tests:
           - not_null
+
+  - name: nba_team_stats
+    description: "Aggregated team statistics including wins, losses, and performance metrics"
+    columns:
+      - name: max_win_streak
+        description: "The longest winning streak achieved by the team in the given season"
+        tests:
+          - not_null
+          - dbt_utils.expression_is_true:
+              expression: ">= 0"
