Add max win streak tracking to NBA team stats
- Added max_win_streak column to nba_team_stats model using window functions
- Added documentation for the new column in _nba_docs.yml
- Added tests to verify max_win_streak is non-negative
- Implemented streak calculation logic using CTEs and window functions
- Only considers regular season games for streak calculation

--- a/models/_nba_docs.yml
+++ b/models/_nba_docs.yml
@@ -120,3 +120,11 @@ models:
       - name: seed
         tests:
           - not_null
+
+  - name: nba_team_stats
+    description: Aggregated team statistics by season including wins, losses, and performance metrics
+    columns:
+      - name: max_win_streak
+        description: The longest winning streak achieved by the team during the regular season
+        tests:
+          - not_null
