Add max win streak column to NBA team stats
- Added max_win_streak column to nba_team_stats model to track longest win streak per team per season
- Implemented win streak calculation using window functions in nba_team_stats.sql
- Added documentation and tests for max_win_streak column in _nba_docs.yml
- Verified implementation with test queries showing correct historical win streaks

--- a/models/_nba_docs.yml
+++ b/models/_nba_docs.yml
@@ -120,3 +120,13 @@ models:
       - name: seed
         tests:
           - not_null
+
+  - name: nba_team_stats
+    description: Aggregated team statistics by season including regular season performance metrics
+    columns:
+      - name: max_win_streak
+        description: The longest consecutive win streak achieved by the team during regular season games in a given season. Streak resets after each loss.
+        tests:
+          - not_null
+          - dbt_utils.expression_is_true:
+              expression: ">= 0"
