Add max win streak column to NBA team stats model
- Added max_win_streak column to nba_team_stats model to track longest winning streak per team per season
- Implemented win streak calculation using window functions on regular season games
- Added documentation for the new column in _nba_docs.yml
- Verified existing tests for not null and non-negative values

--- a/models/_nba_docs.yml
+++ b/models/_nba_docs.yml
@@ -120,3 +120,13 @@ models:
       - name: seed
         tests:
           - not_null
+
+  - name: nba_team_stats
+    description: Aggregated statistics for NBA teams by season, including wins, losses, and performance metrics
+    columns:
+      - name: max_win_streak
+        description: The longest winning streak (consecutive wins) achieved by the team during the regular season
+        tests:
+          - not_null
+          - dbt_utils.expression_is_true:
+              expression: ">= 0"
