Add max win streak column to nba_team_stats model
- Added max_win_streak column to track longest win streak per team in regular season
- Implemented win streak calculation using window functions and proper date ordering
- Added column documentation in _nba_docs.yml
- Created test to verify win streaks are within valid range (0-82)
- Test ensures data quality and business logic constraints

--- a/models/_nba_docs.yml
+++ b/models/_nba_docs.yml
@@ -1,5 +1,11 @@
 version: 2
 
+data_tests:
+  - name: assert_nba_team_stats_win_streak_range
+    description: >
+      Verifies that max_win_streak values in nba_team_stats are between 0 and 82 (max games in regular season).
+      The test fails if any team has a win streak outside this range.
+
 models:
   - name: nba_raw_schedule
     tests:
@@ -120,3 +126,13 @@ models:
       - name: seed
         tests:
           - not_null
+
+  - name: nba_team_stats
+    description: Aggregated team statistics by season including regular season performance metrics
+    columns:
+      - name: max_win_streak
+        description: The longest winning streak achieved by the team during the regular season
+        type: integer
+        tests:
+          - not_null
+
